@startuml
'https://plantuml.com/class-diagram

!includesub kuksa-vss-core_class-diagram.puml!VssCore

package App {
    MainActivity --o VssModelGenerator

    class MainActivity
}

package VssProcessor {

    VssModelGeneratorProcessor -down-> VssModelGeneratorVisitor
    VssModelGeneratorProcessor -down-> VssParser
    VssModelGeneratorProcessor -down-> SpecModel
    VssParser <|- YamlVssParser
    SpecModel <|- VssNodeSpecModel
    VssNode <|-- VssNodeSpecModel

    class VssModelGeneratorProcessor {
        + VssModelGeneratorProcessor(CodeGenerator, KSPLogger)
    }

    class VssModelGeneratorVisitor {
        + visitClassDeclaration(KSClassDeclaration)
    }

    interface VssParser {
        + parseNodes(File, elementDelimiter: String,): Collection<VssNodeSpecModel>
    }

    class YamlVssParser

    interface SpecModel<T : SpecModel<T>> {
        + createClassSpec(packageName: String, relatedNodes: Collection<T>, nestedClasses: Collection<String>): TypeSpec
    }

    class VssNodeSpecModel {
    }
}

@enduml
